--- a/MAUI.ChartingSystem/MainPage.xaml
+++ b/MAUI.ChartingSystem/MainPage.xaml
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MAUI.ChartingSystem.MainPage">
+             x:Class="MAUI.ChartingSystem.MainPage"
+             NavigatedTo="ContentPage_NavigatedTo"
+             >
 
     <ScrollView>
         <VerticalStackLayout
@@ -12,8 +14,8 @@
                 Style="{StaticResource Headline}"
                 SemanticProperties.HeadingLevel="Level1" />
             <ListView
-                ItemsSource="{Binding Appointments}"
-                SelectedItem="{Binding SelectedAppointment}">
+                ItemsSource="{Binding Patients}"
+                SelectedItem="{Binding SelectedPatient}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
