--- a/MAUI.ChartingSystem/Views/AddPatient.xaml
+++ b/MAUI.ChartingSystem/Views/AddPatient.xaml
@@ -1,7 +1,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUI.ChartingSystem.Views.PatientView"
-             Title="PatientView">
+             Title="PatientView"
+             NavigatedTo="ContentPage_NavigatedTo">
     <ScrollView>
         <VerticalStackLayout Padding="20" Spacing="10">
             <Label Text="Name" FontSize="24" HorizontalOptions="Center"/>
@@ -55,12 +56,11 @@
             <CollectionView ItemsSource="{Binding MedicalNotes}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Label Text="{Binding Display}" />
+                        <Label Text="{Binding .}" />
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
-            
-            
+
             <Button Text="OK" Clicked="OkClicked"/>
             <Button Text="Cancel" Clicked="CancelClicked"/>
         </VerticalStackLayout>
