--- a/MAUI.ChartingSystem/Views/AddPatient.xaml
+++ b/MAUI.ChartingSystem/Views/AddPatient.xaml
@@ -28,30 +28,29 @@
 
             <Label Text="Medical History" FontSize="24" HorizontalOptions="Center"/>
             <VerticalStackLayout>
-            <Grid ColumnSpacing="10" RowSpacing="5">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="2*"/>
-                    <!-- <ColumnDefinition Width="2*"/> -->
-                </Grid.ColumnDefinitions>
-                <!-- Header Row -->
-                <Label Text="Date Created" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center"/>
-                <Label Text="Diagnosis" Grid.Row="0" Grid.Column="1" HorizontalOptions="Center"/>
-                <Label Text="Prescription" Grid.Row="0" Grid.Column="2" HorizontalOptions="Center"/>
-                <!-- <Label Text="Physician" Grid.Row="0" Grid.Column="3" HorizontalOptions="Center"/> -->
-                <!-- Entry Row -->
-                <DatePicker Date="{Binding NewNoteDate}" Grid.Row="1" Grid.Column="0" HorizontalOptions="Center"/>
-                <Entry Placeholder="Diagnosis" Text="{Binding NewDiagnosis}" Grid.Row="1" Grid.Column="1"/>
-                <Entry Placeholder="Prescription" Text="{Binding NewPrescription}" Grid.Row="1" Grid.Column="2"/>
-                <!-- <Picker Title="Race" ItemsSource="{Binding Physicians}" SelectedItem="{Binding SelectedPhysician}"/> -->
+                <Grid ColumnSpacing="10" RowSpacing="5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="2*"/>
+                    </Grid.ColumnDefinitions>
+                    <!-- Header Row -->
+                    <Label Text="Date Created" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center"/>
+                    <Label Text="Diagnosis" Grid.Row="0" Grid.Column="1" HorizontalOptions="Center"/>
+                    <Label Text="Prescription" Grid.Row="0" Grid.Column="2" HorizontalOptions="Center"/>
+                    <Label Text="Physician" Grid.Row="0" Grid.Column="3" HorizontalOptions="Center"/>
+                    <!-- Entry Row -->
+                    <DatePicker Date="{Binding NewNoteDate}" Grid.Row="1" Grid.Column="0" HorizontalOptions="Center"/>
+                    <Entry Placeholder="Diagnosis" Text="{Binding NewDiagnosis}" Grid.Row="1" Grid.Column="1"/>
+                    <Entry Placeholder="Prescription" Text="{Binding NewPrescription}" Grid.Row="1" Grid.Column="2"/>
+                    <Picker ItemsSource="{Binding Physicians}" SelectedItem="{Binding SelectedPhysician}" Grid.Row="1" Grid.Column="3"/>
                 </Grid>
-            <!-- Physician is hardcoded. Add a Picker for physicians later on. -->
-            <Button Text="Add Note" Command="{Binding AddMedicalNoteCommand}" />
+                <Button Text="Add Note" Command="{Binding AddMedicalNoteCommand}" />
             </VerticalStackLayout>
             <CollectionView ItemsSource="{Binding MedicalNotes}">
                 <CollectionView.ItemTemplate>
