--- a/MAUI.ChartingSystem/MainPage.xaml
+++ b/MAUI.ChartingSystem/MainPage.xaml
@@ -105,6 +105,7 @@
             <Button Text="Add Patient" Clicked="AddPatientClicked"/>
             <Button Text="Add Physician" Clicked="AddPhysicianClicked"/>
             <Button Text="Add Appointment" Clicked="AddAppointmentClicked"/>
+            <Button Text="Patients" Clicked="PatientsClicked"/>
         </VerticalStackLayout>
     </ScrollView>
 
