Add Appointments page with navigation and ViewModel.
Introduced a new Appointments page to manage appointments, including UI, navigation, and ViewModel logic. Updated `AppShell.xaml` to include navigation to the Appointments page. Added a button and event handler in `MainPage` for navigation.

Refactored `PatientsViewModel` and  PhysiciansViewModel` to improve command naming consistency. Updated `AddAppointmentViewModel` and `AddAppointment.xaml.cs` to navigate to the Appointments page after operations.

Created `AppointmentsViewModel` to handle appointment data and commands for editing and deleting appointments. Added `Appointments.xaml` and `Appointments.xaml.cs` for the Appointments page UI and code-behind. Updated the project file to include the new Appointments page.

Closes #44

--- a/MAUI.ChartingSystem/AppShell.xaml
+++ b/MAUI.ChartingSystem/AppShell.xaml
@@ -20,6 +20,10 @@
         ContentTemplate="{DataTemplate view:Physicians}"
         Route="Physicians" />
     <ShellContent
+        Title="Appointments View"
+        ContentTemplate="{DataTemplate view:Appointments}"
+        Route="Appointments" />
+    <ShellContent
         Title="PatientDetail"
         ContentTemplate="{DataTemplate view:PatientView}"
         Route="Patient" />
