Refactored Clicked Event Handlers to Commands for Delete Patients and Physicians. Closes #35
Add delete confirmation and command bindings

Added confirmation dialogs for deleting patients and physicians. Introduced `DeletePatientCommand` and `DeletePhysicianCommand` in their respective view models, along with `SetUpCommands` methods for initialization. Updated `Patients.xaml` and `Physicians.xaml` to bind delete buttons to the new commands with appropriate `CommandParameter` values. Ensured property change notifications are triggered only after successful deletions.

--- a/MAUI.ChartingSystem/Views/Physicians.xaml
+++ b/MAUI.ChartingSystem/Views/Physicians.xaml
@@ -28,7 +28,8 @@
                                                 <ColumnDefinition/>
                                             </Grid.ColumnDefinitions>
                                             <Button Text="Edit" Grid.Column="0" Style="{StaticResource SecondaryButton}"/>
-                                            <Button Text="Delete" Grid.Column="1" Style="{StaticResource PrimaryButton}"/>
+                                            <Button Command="{Binding BindingContext.DeletePhysicianCommand, Source={x:Reference Name=PhysiciansListView}}"
+                                                CommandParameter="{Binding .}" Text="Delete" Grid.Column="1" Style="{StaticResource PrimaryButton}"/>
                                         </Grid>
                                     </Grid>
                                 </ViewCell>
